[gd_scene load_steps=13 format=3 uid="uid://b848efw74drrq"]

[ext_resource type="Script" path="res://scripts/trex.gd" id="1_2x6ye"]
[ext_resource type="Texture2D" uid="uid://b1rdjhxfg84hm" path="res://assets/Sprite Pack 2/4 - Percy/Running (32 x 32).png" id="1_y0au6"]
[ext_resource type="Texture2D" uid="uid://2um3kiibmjcq" path="res://assets/Sprite Pack 2/4 - Percy/Shooting_Fireball (32 x 32).png" id="2_6b31d"]
[ext_resource type="Texture2D" uid="uid://cgiby3px6gsof" path="res://assets/Sprite Pack 2/4 - Percy/Hurt (32 x 32).png" id="3_y36i1"]
[ext_resource type="PackedScene" uid="uid://ccrhmocn35yyd" path="res://prefabs/hitbox.tscn" id="5_oe0in"]

[sub_resource type="Animation" id="Animation_ku5x3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y0au6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_xyfd8"]
resource_name = "hurt"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_y36i1")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_40bho"]
resource_name = "running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_y0au6")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_2aiol"]
resource_name = "shooting"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_6b31d")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_fireball"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wlee0"]
_data = {
"RESET": SubResource("Animation_ku5x3"),
"hurt": SubResource("Animation_xyfd8"),
"running": SubResource("Animation_40bho"),
"shooting": SubResource("Animation_2aiol")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_srp23"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yl1qb"]
size = Vector2(14, 4)

[node name="trex" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_2x6ye")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(0, -16)
texture = ExtResource("1_y0au6")
hframes = 6

[node name="hurt_sprite" type="Sprite2D" parent="sprite"]
visible = false
self_modulate = Color(1, 0.380392, 0.305882, 1)
texture = ExtResource("3_y36i1")

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "running"
libraries = {
"": SubResource("AnimationLibrary_wlee0")
}

[node name="fireball_spawn_point" type="Marker2D" parent="."]
position = Vector2(6, -12)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_srp23")

[node name="ground_detector" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
collision_mask = 2

[node name="player_detector" type="RayCast2D" parent="."]
position = Vector2(0, -8)
target_position = Vector2(50, 0)

[node name="hitbox" parent="." instance=ExtResource("5_oe0in")]
position = Vector2(5, -10)

[node name="collsion" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-5, -10)
shape = SubResource("RectangleShape2D_yl1qb")
debug_color = Color(0.898039, 0.282353, 0.360784, 0.419608)

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
